@@ -36,6 +36,7 @@ NB: "RCS: X..Y " means that the particular release includes
     - ‘:sgf-gametree’ internal representation inverted (BI)
     - ‘gnugo-magic-undo’ handles SPEC ‘0’
     - dropped ‘(gnugo-move-history 'count)’ (BI)
+    - new func: ‘gnugo-current-player’
 
 - 2.3.1 | 2014-02-27
   - portability fixes
